--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,10 @@ header {
     background-color: white;
     display: flex;
     justify-content: space-between;
+    position: fixed; /*membuat posisi fix saat scrool*/
+    left: 0px; /*mengatur kiri*/
+    right: 0px; /*mengatur kanan*/
+    top: 0px; /*mengatur atas*/
 }
 ul {
     list-style: none; /*menghilangkan bullet*/
@@ -15,4 +19,23 @@ li {
 }
 a {
     text-decoration: none; /*menghilangkan garis bawah pada text*/
+}
+section {
+    background-color: white; /*background putih*/
+    margin: 100px 100px 30px 100px; /*mengatur margin atas, kanan, bawah, kiri*/
+    padding: 20px; /*mengatur elemen di dalamnya*/
+}
+section h1 {
+    text-align: center; /*membuat text di tengah*/
+}
+section article {
+    border-bottom: 2px solid;
+}
+footer {
+    background-color: black;
+    padding: 10px;
+}
+footer h5 {
+    color: white;
+    text-align: center;
 }
